--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<!--### TODO about me, skills, projects, where do i see myself in future ###-->
+
+
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +14,6 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/terminal.css">
 
-    <!--### SYNTAX HUGHLIGHTER FILES ###-->
-    <link type="text/css" rel="stylesheet" href="highlighter/style/sh_style.css">
-    <script type="text/javascript" src="highlighter/sh_main.min.js"></script>
-    <script type="text/javascript" src="highlighter/lang/sh_javascript.min.js"></script>
-
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     
@@ -22,7 +21,7 @@
 <body>
 
     <div class="container-fluid backImg">
-        <div class="row mx-sm-2">
+        <div class="row mx-sm-auto max-w-1200 ">
             <div class="col-lg-6 p-0">
                 <div id="headerImg" class="mr-lg-2 headerTile ratio-golden">
                     <!-- <img class="img-fluid" src="img/laptop.jpg" alt=""> -->
