fixed toppanel on low width screens

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="container-fluid backImg">
         <div class="row mx-sm-auto max-w-1200 topPanel">
-            <div class="col-lg-6 p-0 welcome">
+            <div class="col-lg-6 p-0 ratio-golden">
                 <div id="welcomeHeader" class="mr-lg-2 headerTile">
                     <div style="height: 100%; width: 100%; padding: 2vw;">
                         <p class="fitFont" size="5">Hi, I'm</p>
@@ -41,8 +41,8 @@
                 </div>
             </div>
 
-            <div class="col-lg-6 p-0 welcome">
-                <div id="about" class="ml-lg-2 headerTile">
+            <div class="col-lg-6 p-0 ratio-golden">
+                <div id="navigation" class="ml-lg-2 headerTile">
                     <!--#region #################### TERMINAL ####################### -->
                     <div id="term_terminal" class="center-horizontal center-vertical d-none">
                         <div id="term_topBar">
@@ -115,8 +115,12 @@
 
         <div class="row">
             <div class="col-12 p-0">
-                <div class="panel clone-height mt-4" data-target="#about">
-                    bb
+                <div id="aboutMePanel" class="my-4 py-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Praesent lacus justo, euismod sit amet diam ut, varius faucibus diam.</p>
+                    <p>In accumsan tellus et imperdiet hendrerit. Aliquam consectetur suscipit urna id iaculis.</p>
+                    <p>Vivamus arcu sapien, luctus id orci et, semper bibendum enim.</p>
+                    <p>Fusce eleifend lorem et est molestie egestas vitae sed augue.</p>
                 </div>  
             </div>
         </div>
