--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <p class="fitFont" size="5">Hi, I'm</p>
                         <h1>Michał Pilch</h1>
                         <p style="text-align: center;">and I aspire to be</p>
-                        <p style="text-align: right;">Web Developer</p>
+                        <p style="text-align: right; font-size: 1.6em;">Web Developer</p>
                     </div>
                     <div class="squares pos-bottomleft">
                         <div class="insideSQ"></div>
@@ -111,18 +111,27 @@
                     <!--#endregion ############################################ -->
                 </div>
             </div>
-        </div>
 
-        <div class="row">
             <div class="col-12 p-0">
                 <div id="aboutMePanel" class="my-4 py-4">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h1>About Me</h1>
+                    <div class="separator w-25 mx-auto"></div>
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <p>Praesent lacus justo, euismod sit amet diam ut, varius faucibus diam.</p>
                     <p>In accumsan tellus et imperdiet hendrerit. Aliquam consectetur suscipit urna id iaculis.</p>
                     <p>Vivamus arcu sapien, luctus id orci et, semper bibendum enim.</p>
-                    <p>Fusce eleifend lorem et est molestie egestas vitae sed augue.</p>
+                    <p>Fusce eleifend lorem et est molestie egestas vitae sed augue.</p> -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Praesent lacus justo, euismod sit amet diam ut, varius faucibus diam.
+                    In accumsan tellus et imperdiet hendrerit. Aliquam consectetur suscipit urna id iaculis.
+                    Vivamus arcu sapien, luctus id orci et, semper bibendum enim.
+                    Fusce eleifend lorem et est molestie egestas vitae sed augue.</p>
                 </div>  
             </div>
+        </div>
+
+        <div class="row">
+            
         </div>
 
     </div>
