--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-100 text-white projectInfoBtn centerContent" data-toggle="collapse" data-target="#terminalInfo" aria-expanded="false" aria-controls="collapseprojectinfo">
-                    <!-- #TODO uzupelnic ten szajs, moze zrobic ten border zmniejszajacy,
-                    musi byc wewnatrz tego diva -->
+                <div class="text-white projectInfoBtn centerContent mx-auto" 
+                data-toggle="collapse" data-target="#terminalInfo" 
+                aria-expanded="false" aria-controls="collapseprojectinfo">
+                    <div class="projectInfoBtn_border mt-auto"></div>
                 </div>
-                
             </div>
 
             <div class="col-lg-2 col-6 col-md-3 p-1">
@@ -222,7 +222,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-100 text-white projectInfoBtn centerContent" data-toggle="collapse" data-target="#wetInfo" aria-expanded="false" aria-controls="collapseprojectinfo"></div>
+                <div class="text-white projectInfoBtn centerContent mx-auto" 
+                data-toggle="collapse" data-target="#wetInfo" 
+                aria-expanded="false" aria-controls="collapseprojectinfo">
+                    <div class="projectInfoBtn_border mt-auto"></div>
+                </div>
             </div>
 
             <div class="col-lg-2 col-6 col-md-3 p-1">
@@ -248,7 +252,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-100 text-white projectInfoBtn centerContent" data-toggle="collapse" data-target="#_info" aria-expanded="false" aria-controls="collapseprojectinfo"></div>
+                <div class="text-white projectInfoBtn centerContent mx-auto" 
+                data-toggle="collapse" data-target="#_info" 
+                aria-expanded="false" aria-controls="collapseprojectinfo">
+                    <div class="projectInfoBtn_border mt-auto"></div>
+                </div>
             </div>
 
             <!--#endregion ################ END OF PROJECTS ############################ -->
@@ -313,7 +321,7 @@
                 <div class="col-6 text-center">asdas</div>
                 <div class="col-6 text-center">asdas</div>
             </div>
-        </div>a
+        </div>
     </footer>
     <div class="signature">
         <p>&copy; Copyright Michał Pilch 2020 | <a href="licences/licenses.html" target="_blank">Licences</a></p>
