--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <div class="term_dropdown term_buttonHover">
                                 <div id="term_helpButton" class="term_menuItem">Help</div>
                                 <div id="term_helpMenu" class="term_dropdownMenu term_hidden">
-                                    <div class="term_dropdownMenu_item">How to use</div>
+                                    <div id="howToBTN" class="term_dropdownMenu_item">How to use</div>
                                 </div>
                             </div>
                             
@@ -69,24 +69,6 @@
                 </div>
                 
             </div>
-
-            <!-- <div class="col-lg-10 offset-1 p-0 ">
-                <div id="welcomeHeader" class="mr-lg-2 headerTile">
-                    <div style="height: 100%; width: 100%; padding: 2vw;">
-                        <p class="fitFont" size="5">Hi, I'm</p>
-                        <h1>Michał Pilch</h1>
-                        <p style="text-align: center;">and I aspire to be</p>
-                        <p style="text-align: right; font-size: 1.6em;">Web Developer</p>
-                    </div>
-                    <div class="squares pos-bottomleft">
-                        <div class="insideSQ"></div>
-                        <div class="SQred"></div>
-                        <div class="SQblue"></div>
-                        <div class="SQgreen"></div>
-                    </div>
-                </div>
-            </div> -->
-
 
             <div id="buttonABTME">About me</div>
 
@@ -275,7 +257,7 @@
 
             <div class="col-12 mb-4">
                 <div class="sectionDescription mx-auto">
-                    <p>These are technologies I use on an everyday basis.</p>
+                    <p>These are technologies I use on everyday basis.</p>
                 </div>
             </div>
         </div>
